# victree

./: .gitignore  README.md  batch_parallel.sh  batch_parallel_harald.sh  batch_victree.sh  data_example.h5  data_vis.R  data_vis.r  diagnostics_lib.R  diagnostics_lib.r  environment.yml  eps_utils.py  kv_parallel_miss.sh  main.py  mr_parall.sh  notes.md  obs_example.txt  pyproject.toml  r_analysis.R  r_analysis_tmp.Rmd  requirements.txt  run_victree_analysis.sh  score_parall_final_reltemp.sh  score_parallel.sh  score_parallel_temp_g.sh  victree_main_run.sh
datasets/: SPECTRUM_prob_CN_missegregation=4e-03_prob_CN_whole_genome_duplication=1e-02-input-selection-chrom-arm.csv  n5_c300_l1k.h5  simul_K5_A5_N50_M20.h5  simul_k5a7n300m213e1-50d10mt1-10-500-50.h5ad  simul_k5a7n300m413e1-50d10mt1-10-500-50.h5ad
fig/: graph.gv
inference/: copy_tree.py  run.py
model/: generative_model.py
src/: eps_utils.py  main.py  simul.py  test_run.py  treehmm.py
test_output/: append_test.h5  out_test.h5  progress_tracking.diagnostics.h5  victree.diagnostics.h5
tests/: __init__.py  model_variational_comparisons.py  test_Rphi_model_fixed_tree.py  test_VICTree_initialization_given_fixed_tree.py  test_VICtree_all_topologies_fixed_tree.py  test_VICtree_fixed_tree.py  test_VICtree_qc_smoothing_fixed_tree.py  test_VICtree_quadruplet.py  test_VICtree_tree_post_optimization.py  test_data_handling.py  test_diagnostics.py  test_elbo.py  test_initialization.py  test_main.py  test_multi_chromosome_model_fixed_tree.py  test_qT.py  test_q_Z.py  test_q_epsilon.py  test_q_pi.py  test_qc.py  test_qmt.py  (+16 more)
(+261 files in other folders)
